# ngfx-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
ngfx/: Cargo.toml
ngfx-sdk/0.9.0/: LICENSE.txt
ngfx-sdk/0.9.0/include/: NGFX_CUDA.h  NGFX_CUDART.h  NGFX_CUDART_Types.h  NGFX_CUDA_Types.h  NGFX_D3D12.h  NGFX_D3D12_Types.h  NGFX_GPUTrace_CUDA.h  NGFX_GPUTrace_CUDART.h  NGFX_GPUTrace_CUDART_Types.h  NGFX_GPUTrace_CUDA_Types.h  NGFX_GPUTrace_Common.h  NGFX_GPUTrace_Common_Types.h  NGFX_GPUTrace_D3D12.h  NGFX_GPUTrace_D3D12_Types.h  NGFX_GPUTrace_OpenGL.h  NGFX_GPUTrace_OpenGL_Types.h  NGFX_GPUTrace_Vulkan.h  NGFX_GPUTrace_Vulkan_Types.h  NGFX_GraphicsCapture_Common.h  NGFX_GraphicsCapture_Common_Types.h  NGFX_GraphicsCapture_D3D12.h  NGFX_GraphicsCapture_D3D12_Types.h  NGFX_GraphicsCapture_Vulkan.h  NGFX_GraphicsCapture_Vulkan_Types.h  NGFX_OpenGL.h  NGFX_OpenGL_Types.h  NGFX_SystemProfiling_Common.h  NGFX_SystemProfiling_Common_Types.h  NGFX_SystemProfiling_D3D12.h  NGFX_SystemProfiling_D3D12_Types.h  NGFX_SystemProfiling_Vulkan.h  NGFX_SystemProfiling_Vulkan_Types.h  NGFX_Types.h  NGFX_Vulkan.h  NGFX_Vulkan_Types.h
ngfx-sdk/0.9.0/include/Impl/: NGFX_Core.h  NGFX_Defines.h
ngfx-sys/: Cargo.toml  build.rs
ngfx-sys/src/: lib.rs  shim.c  shim.h
ngfx/examples/: README.md  hello_compute_trace.comp  hello_compute_trace.rs  hello_compute_trace.spv
ngfx/src/: gpu_trace.rs  graphics_capture.rs  lib.rs  vulkan.rs
ngfx/src/vulkan/: gpu_trace.rs  graphics_capture.rs
