[package]
name = "ngfx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust bindings for the NVIDIA Nsight Graphics SDK"

[features]
default = ["vulkan", "graphics-capture", "gpu-trace"]

vulkan = ["ngfx-sys/vulkan"]

# Activity features currently only have Vulkan backends in the high-level
# crate, so they imply `vulkan`.
graphics-capture = ["vulkan", "ngfx-sys/graphics-capture"]
gpu-trace = ["vulkan", "ngfx-sys/gpu-trace"]
system-profiling = ["vulkan", "ngfx-sys/system-profiling"]

[dependencies]
ngfx-sys = { path = "../ngfx-sys", default-features = false }
ash = { version = "0.38", default-features = false }
thiserror = "2"

[dev-dependencies]
# Examples need a real Vulkan loader.
ash = { version = "0.38", default-features = false, features = ["loaded"] }

[[example]]
name = "hello_compute_trace"
required-features = ["vulkan", "gpu-trace"]
